refactoring and add unit tests